Ultimas correções implementadas

--- a/views/result.pug
+++ b/views/result.pug
@@ -8,7 +8,7 @@ html
       include style.css
       include form.js
       
-    title If Conecta
+    title Ifsp Cloud
   body
     .conteiner-fluid
       
