--- a/views/form.pug
+++ b/views/form.pug
@@ -7,7 +7,7 @@ html
     style
       include style.css
       include fontawesome.css
-    title If Conecta
+    title Ifsp Cloud
   body
     .conteiner-fluid
       
