--- a/views/style.css
+++ b/views/style.css
@@ -17,11 +17,11 @@
     background-color: #4CAF50;
     border: none;
     color: white;
-    padding: 15px 30px;
-    text-align: right;
+    padding: 15px 16px;
+    text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 20px;
+    font-size: 18px;
     width: 420px;
 }
 
