--- a/views/form.pug
+++ b/views/form.pug
@@ -2,14 +2,31 @@ doctype html
 html
   head
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
+    
+    style
+      include style.css
     title If Conecta
   body
     .conteiner-fluid
-      form(action="/form" method="post" enctype="multipart/form-data")
-        .form-group
-            legend Escolha um arquivo para fazer upload.
-            input(type='file', name='code', id='code', class='form-control btn')
-            button(type="submit" class="btn btn-primary" id="btnSubmit") Upload
+      
+        form(action="/form" method="post" enctype="multipart/form-data")
+          .form-group
+              legend.Header Bem Vindo ao IF Cloud!
+              br
+              div.divContainer
+                  ul
+                    li 
+                      p.Legenda Selecione um arquivo: 
+                      input(type='file', name='code', id='code', class='btnSelect') 
+                    br
+                    li
+                      p.Legenda Faça o upload e veja o resultado!
+                      button(type="submit" class="btnUpload" id="btnSubmit") Upload
+          
+          
+          
+          
+  
 
     
   
