--- a/views/form.pug
+++ b/views/form.pug
@@ -2,9 +2,11 @@ doctype html
 html
   head
     link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous")
-    
+    script(src="https://code.jquery.com/jquery-3.1.0.min.js")
+  
     style
       include style.css
+      include fontawesome.css
     title If Conecta
   body
     .conteiner-fluid
@@ -14,19 +16,15 @@ html
               legend.Header Bem Vindo ao IF Cloud!
               br
               div.divContainer
-                  ul
-                    li 
-                      p.Legenda Selecione um arquivo: 
-                      input(type='file', name='code', id='code', class='btnSelect') 
-                    br
-                    li
-                      p.Legenda Faça o upload e veja o resultado!
-                      button(type="submit" class="btnUpload" id="btnSubmit") Upload
-          
-          
-          
-          
-  
-
-    
-  
+                div.legendas
+                  h3(class="Legenda") Escolha um arquivo para fazer upload.
+                  br
+                div.botoes
+                  input(type='file', name='code', id='code', class='btnSelect')
+                  br
+                div.legendas
+                  h3(class="Legenda") Faça o upload e veja o resultado!
+                  br
+                div.botoes
+                  button(type="submit" for="code" class="btnUpload" id="btnSubmit") Upload
+        
