--- a/views/style.css
+++ b/views/style.css
@@ -57,7 +57,8 @@
   width: 500px;
   height: 370px;
   text-align: center;
-  padding-top: 10px;
+  font-family: Lucida Console,Lucida Sans Typewriter,monaco,Bitstream Vera Sans Mono,monospace;
+  padding: 10px;
 }
 
 
